# control-dualsense-mod

./: .gitmodules  CMakeLists.txt  README.dsx.md  README.md
.github/workflows/: build-installer.yml
config/: dualsense-mod.INI
installer/: ControlDSModInstaller.iss
src/: Config.cpp  Config.h  DualsenseMod.cpp  DualsenseMod.h
